--- a/sample/app/src/main/res/values/strings.xml
+++ b/sample/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="load_another">Load another</string>
 
     <string name="fab_click_action">Action</string>
     <string name="fab_click_message">Replace with your own action</string>
