--- a/sample/app/src/main/res/values/strings.xml
+++ b/sample/app/src/main/res/values/strings.xml
@@ -3,11 +3,13 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="load_default">Load default</string>
     <string name="load_another">Load another</string>
 
     <string name="fab_click_action">Action</string>
     <string name="fab_click_message">Replace with your own action</string>
 
+    <string name="say_hello">Say hello!</string>
     <string name="hello_first_fragment">Hello from first fragment.</string>
     <string name="hello_second_fragment">Hello from second fragment.</string>
 </resources>
